# kakapo-main

./: .gitignore  Cargo.toml
src/: main.rs
src/config/: mod.rs
src/configure/: mod.rs  steps.rs
src/server/: api.rs  auth_routes.rs  environment.rs  error.rs  mod.rs  socket_server.rs  sockets.rs  state.rs
src/services/: email.rs  mod.rs
src/sockets/: client.rs  server.rs
src/state/: api.rs  mod.rs
src/wizard/: mod.rs  steps.rs  utils.rs
