[package]
name = "kakapo"
version = "0.1.0"
authors = ["Atta Zadeh <atta.h.zadeh@gmail.com>"]
path = "src/server/main.rs"

[dependencies]
actix = "0.7.7"
actix-broker = "0.1.4"
actix-web = { version = "0.7.14", features = ["alpn"] }

base64 = "0.10.0"
bcrypt = "0.2.1"
bytes = "0.4"
chrono = { version = "0.4.6", features = ["serde"] }
clap = "2.32"
dotenv = "0.9.0"
env_logger = "0.6.0"
failure = "0.1.2"
futures = "0.1"
json = "0.11.13"
jsonwebtoken = "5.0"
log = "0.4.0"
num_cpus = "1.8.0"
openssl = "0.10.16"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

tokio-io = "0.1"
tokio-core = "0.1"
uuid = { version = "0.7", features = ["serde", "v4"] }

#for tests
mockito = "0.15.0"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
