[package]
name = "kakapo"
version = "0.1.0"
authors = ["Atta Zadeh <atta.h.zadeh@gmail.com>"]
path = "src/main.rs"

[dependencies]
ansi_term = "0.11.0"
clap = "2.32"
env_logger = "0.6.0"
log = "0.4"
rpassword = "2.1.0"

kakapo_api = { path = "/home/atta/kakapo-project/kakapo-server" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
