[package]
name = "kakapo"
version = "0.1.0"
authors = ["Atta Zadeh <atta.h.zadeh@gmail.com>"]
path = "src/main.rs"

[dependencies]
ansi_term = "0.11.0"
clap = { version = "2.32", features = ["color", "suggestions"] }
console = ">=0.3.0, <1.0.0"
dialoguer = "0.3.0"
env_logger = "0.6.0"
log = "0.4"
Inflector = "0.11.4"
rand = "0.6"
rpassword = "2.1.0"

serde = "1.0.88"
serde_derive = "1.0.88"
serde_json = "1.0"
serde_yaml = "0.8.8" # Unfortunately, this doesn't persist comments

kakapo_api = { path = "/home/atta/kakapo-project/kakapo-server" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
